// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should support rejecting promises 1`] = `
"test('should support rejecting promises', async () => {
  await expect(
    Promise.reject(new Error('octopus')),
  ).rejects.toThrowErrorMatchingInlineSnapshot(\`"octopus"\`);
});
"
`;

exports[`updates existing snapshot: updated snapshot 1`] = `
"test('updates existing snapshot', () => {
  expect(() => {
    throw new Error('apple');
  }).toThrowErrorMatchingInlineSnapshot(\`"apple"\`);
});
"
`;

exports[`works fine when function throws error with cause: initial write with cause 1`] = `
"test('works fine when function throws error', () => {
  expect(() => {
    throw new Error('apple', {
      cause: new Error('banana', {
        cause: new Error('orange'),
      }),
    });
  }).toThrowErrorMatchingInlineSnapshot(\`
    "apple
    Cause: banana
    Cause: orange"
  \`);
});
"
`;

exports[`works fine when function throws error with string cause: initial write with cause 1`] = `
"test('works fine when function throws error', () => {
  expect(() => {
    throw new Error('apple', {
      cause: 'here is a cause',
    });
  }).toThrowErrorMatchingInlineSnapshot(\`
    "apple
    Cause: here is a cause"
  \`);
});
"
`;

exports[`works fine when function throws error: initial write 1`] = `
"test('works fine when function throws error', () => {
  expect(() => {
    throw new Error('apple');
  }).toThrowErrorMatchingInlineSnapshot(\`"apple"\`);
});
"
`;
